--- a/src/App.css
+++ b/src/App.css
@@ -1,65 +1,19 @@
+body {
+  margin: 0 auto;
+}
+
 .App {
   text-align: center;
 }
 
-.App-header {
-  background-color: #414b5f;
+.App-main {
+  display: flex;
   min-height: 100vh;
-  align-items: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-.Message {
-  display: block;
-  width: 300px;
-  font-size: calc(3px + 2vmin);
-  color: rgb(43, 184, 97);
-}
-
-.MessageHeader {
-  font-size: calc(10px + 2vmin);
-}
-
-.chatWindow {
-  font-size: 13pt;
-}
-
-.chatMessage {
+.App-right {
+  background-color: rgba(214, 214, 214, 0.986);
   display: flex;
-  justify-content: center;
-}
-
-.chatMessage-author {
-  font-weight: 900;
-  margin-right: 10px;
-}
-
-.chatInput {
-  font-size: 20px;
-  display: flex;
-  justify-content: center;
-}
-
-.chatInput__author {
-  height: 30px;
-  margin-right: 10px;
-}
-
-.chatInput__text {
-  height: 30px;
-  margin-right: 10px;
+  flex-direction: column;
+  flex-grow: 1;
 }
